manifests/duplicati/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duplicati
  namespace: tools
  labels:
    app.kubernetes.io/name: duplicati
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: duplicati
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: duplicati
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: production
      app.kubernetes.io/part-of: duplicati
  template:
    metadata:
      labels:
        app.kubernetes.io/name: duplicati
        app.kubernetes.io/component: server
        app.kubernetes.io/instance: production
        app.kubernetes.io/part-of: duplicati
    spec:
      containers:
        - name: duplicati
          image: lscr.io/linuxserver/duplicati:latest
          ports:
            - name: http
              containerPort: 8200
          volumeMounts:
            - name: config
              mountPath: /config
            - name: source-coen
              mountPath: /source/coen
            - name: source-anne
              mountPath: /source/anne
            - name: source-shared
              mountPath: /source/shared
            - name: source-dsmrreader
              mountPath: /source/dsmrreader
            - name: source-immich-media
              mountPath: /source/immich-media
            - name: source-r01-1tb-k8s
              mountPath: /source/r01-1tb-k8s
          resources: {}
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pvc-iscsi-duplicati-config
        - name: source-coen
          persistentVolumeClaim:
            claimName: pvc-nfs-backup-source-coen
        - name: source-anne
          persistentVolumeClaim:
            claimName: pvc-nfs-backup-source-anne
        - name: source-shared
          persistentVolumeClaim:
            claimName: pvc-nfs-backup-source-shared
        - name: source-dsmrreader
          persistentVolumeClaim:
            claimName: pvc-nfs-backup-source-dsmrreader
        - name: source-immich-media
          persistentVolumeClaim:
            claimName: pvc-nfs-backup-source-immich-media
        - name: source-r01-1tb-k8s
          persistentVolumeClaim:
            claimName: pvc-nfs-backup-source-r01-1tb-k8s


---
apiVersion: v1
kind: Service
metadata:
  name: duplicati
  namespace: tools
  labels:
    app.kubernetes.io/name: duplicati
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: duplicati
spec:
  selector:
    app.kubernetes.io/name: duplicati
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: duplicati
  ports:
    - name: http
      protocol: TCP
      port: 8200
      targetPort: http

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: duplicati
  namespace: tools
  labels:
    app.kubernetes.io/name: duplicati
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: duplicati
spec:
  ingressClassName: nginx-private
  rules:
    - host: duplicati.lan.theautomation.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: duplicati
                port:
                  name: http
  tls:
    - hosts:
        - duplicati.lan.theautomation.nl
      secretName: tls-wildcard-lan-theautomation-nl
